--- a/main.css
+++ b/main.css
@@ -347,13 +347,18 @@ canvas {
 
 .snap {
     scroll-snap-type: y mandatory;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
     overflow: scroll;
-    scroll-padding: 10px;
+    scroll-snap-coordinate: 0 0;
+    scroll-snap-points-y: repeat(100%);
+    -webkit-overflow-scrolling: touch;
 }
 
 .art {
     scroll-snap-align: start;
+    width: 100vw;
+    height: 100%;
     text-align: center;
     display: flex;
     align-items: center;
